--- a/pages/learning-labs/jte-advanced-features/4-multimethod-steps.adoc
+++ b/pages/learning-labs/jte-advanced-features/4-multimethod-steps.adoc
@@ -1,4 +1,5 @@
 [[JTE Advanced Features MultiMethod Steps]]
+
 == Multi-Method Steps
 
 While learning about Pipeline Lifecycle Hooks, we created a step that:
@@ -11,12 +12,11 @@ more detail.
 
 [IMPORTANT]
 .Important
-====
 Have you ever wondered why library steps create a method named `call`?
-
 This is because, in groovy, `something()` gets translated to
 `something.call()`.
-====If we understand this concept, then it would make sense that we
+
+If we understand this concept, then it would make sense that we
 could define other methods within our steps and invoke them by their
 full name.
 
@@ -93,7 +93,8 @@ should now be:
         ├── splunk_pipeline_start.groovy
         └── splunk_step_watcher.groovy
 ----
-======= Update the Pipeline Configuration
+====
+=== Update the Pipeline Configuration
 
 Update the Pipeline Configuration to load the `git` library.
 
@@ -128,7 +129,9 @@ git.push()
 ====
 When invoking a non-call method defined within a step, you do so by
 `<step_name>.<method_name>(<arguments>)`.
-======= Run the Pipeline
+====
+
+=== Run the Pipeline
 
 Run the pipeline again and you will see logs similar to:
 
