--- a/pages/learning-labs/jte-primitives/3-stages.adoc
+++ b/pages/learning-labs/jte-primitives/3-stages.adoc
@@ -19,7 +19,8 @@ primitive was created to address this use case.
 ====
 https://jenkinsci.github.io/templating-engine-plugin/pages/Primitives/stages.html[View
 the Stage documentation]
-======= Define and Use A Stage
+====
+=== Define and Use A Stage
 
 A very common stage to create is a *Continuous Integration* stage.
 
@@ -33,7 +34,8 @@ building an artifact, running unit tests, and performing static code
 analysis on every commit to feature branches in a source code repository
 and then once again in the Pull Request job to verify the merged result
 is still good.
-====Our current pipeline template specifies to run the `build()` and
+====
+Our current pipeline template specifies to run the `build()` and
 `static_code_analysis()` steps. Let's group these together into a
 `continuous_integration()` stage.
 
@@ -66,7 +68,8 @@ pipeline template.
 
 The lines within the `continuous_integration` block outline which steps
 will be chained together when the stage is invoked.
-======== Update the Pipeline Template
+====
+==== Update the Pipeline Template
 
 With the `continuous_integration` stage defined, we can update the
 pipeline template to make use of it.
