Fixed spacing issues

--- a/learning-labs/modules/try-it-out/pages/create-github-credentials.adoc
+++ b/learning-labs/modules/try-it-out/pages/create-github-credentials.adoc
@@ -1,4 +1,5 @@
 [[Create Jenkins Credentials for GitHub]]
+
 == Create Jenkins Credentials for GitHub
 
 On this page, you will be creating some
@@ -26,7 +27,8 @@ permission to delete the repository.
 Don’t forget to save this token in some place where you can easily
 access it in case you need it in the future, otherwise, you may need to
 create a new one if you lose it.
-======= Adding a Credential to Jenkins
+====
+=== Adding a Credential to Jenkins
 
 You will now be adding your personal GitHub credentials to your Jenkins
 instance as a Jenkins credential.
