Changed nav.adoc files to include nesting

--- a/learning-labs/modules/jte-primitives/nav.adoc
+++ b/learning-labs/modules/jte-primitives/nav.adoc
@@ -1,7 +1,7 @@
 * xref:index.adoc[JTE: Pipeline Primitives]
-* xref:1-prerequisites.adoc[Prerequisites]
-* xref:2-pipeline-job.adoc[Create a Pipeline Job]
-* xref:3-stages.adoc[Stages]
-* xref:4-application-environments.adoc[Application Environments]
-* xref:5-keywords.adoc[Keywords]
-* xref:6-summary.adoc[Summary]
+** xref:1-prerequisites.adoc[Prerequisites]
+** xref:2-pipeline-job.adoc[Create a Pipeline Job]
+** xref:3-stages.adoc[Stages]
+** xref:4-application-environments.adoc[Application Environments]
+** xref:5-keywords.adoc[Keywords]
+** xref:6-summary.adoc[Summary]
