--- a/learning-labs/modules/try-it-out/nav.adoc
+++ b/learning-labs/modules/try-it-out/nav.adoc
@@ -1,8 +1,8 @@
 * xref:index.adoc[Try It Out]
-* xref:environment-preparation.adoc[Environment Preparation]
-* xref:sdp-overview.adoc[SDP Overview]
-* xref:pipeline-configuration-file.adoc[Understanding the Pipeline Configuration File]
-* xref:jenkinsfile.adoc[Understanding the Jenkins File]
-* xref:create-github-credentials.adoc[Create Jenkins Credentials for Github]
-* xref:run-jenkins-build.adoc[Run the Jenkins Build]
-* xref:troubleshooting.adoc[Troubleshooting]
+** xref:environment-preparation.adoc[Environment Preparation]
+** xref:sdp-overview.adoc[SDP Overview]
+** xref:pipeline-configuration-file.adoc[Understanding the Pipeline Configuration File]
+** xref:jenkinsfile.adoc[Understanding the Jenkins File]
+** xref:create-github-credentials.adoc[Create Jenkins Credentials for Github]
+** xref:run-jenkins-build.adoc[Run the Jenkins Build]
+** xref:troubleshooting.adoc[Troubleshooting]
